# dgx-spark-bench

./: .gitignore  README.md  index.html
docs/: glm-5.2-2bit-evaluation-framework.md
harness/: bench.py  mock_openai.py  pyproject.toml
harness/configs/: llama31-8b-nvfp4-vllm.yaml  mock-local.yaml
harness/tests/: test_bench.py
logs/: notification.json  post_tool_use.json  pre_tool_use.json  session_start.json  stop.json  user_prompt_submit.json
recipes/: README.md
results/: deepseek-v4-flash-dspark-dual.json  deepseek-v4-flash-spark-q3-llamacpp.json  gemma-4-12b-it-llamacpp.json  gemma-4-26b-a4b-bf16.json  gemma-4-31b-nvfp4.json  gpt-oss-20b-llamacpp.json  kimi-linear-48b-q8-llamacpp.json  laguna-s-2.1-nvfp4-nspec15.json  laguna-s-2.1-nvfp4.json  manifest.json  mimo-v25-dual.json  minimax-m3-dual.json  mistral-medium-3.5-128b-nvfp4-bench.json  nemotron-3-super-nvfp4-vllm.json  nemotron-labs-3-puzzle-75b-nvfp4-aeon7.json  nemotron3-nano-30b-fp8.json  nemotron3-nano-30b-q8-llamacpp.json  nemotron3-nano-omni-nvfp4-vllm.json  nex-n2-pro-iq1m-llamacpp.json  ornith-35b-nvfp4-aeon7.json  ornith-35b-q8-llamacpp.json  qwen-agentworld-35b-bf16.json  qwen3-coder-next-q4-llamacpp.json  qwen3.6-27b-nvfp4-aeon7-bench.json  qwen3.6-27b-nvfp4-miaai-bench.json  qwen3.6-27b-nvfp4-nvidia-27b.json  qwen3.6-27b-nvfp4-unsloth.json  qwen3.6-35b-heretic-dflash-bench.json  qwen3.6-35b-nvfp4-nvidia-specoff.json  qwen3.6-35b-nvfp4-nvidia.json  qwen3.6-35b-nvfp4-unsloth-fast.json  qwen3.6-35b-q4-llamacpp.json  qwen3.6-35b-q8-llamacpp.json  qwopus3.6-27b-coder-q8-llamacpp.json  (+2 more)
(+88 files in other folders)
