[project]
name = "dgx-spark-bench-harness"
version = "0.1.0"
description = "Concurrency-throughput benchmark harness for LLM inference on NVIDIA DGX Spark"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<0.29",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "jsonschema>=4.20",
    "ruff>=0.6",
]

[project.scripts]
spark-bench = "bench:main"

# Reproducibility: commit the uv.lock produced by `uv lock` so every run resolves to the
# exact same dependency versions.

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
